--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "atmos_cubed_sphere"]
   path = atmos_cubed_sphere
-  url = https://github.com/NOAA-SWPC/GFDL_atmos_cubed_sphere
-  branch = dev/emc
+  url = https://github.com/SvetlanaKarol-NOAA/GFDL_atmos_cubed_sphere
+  branch = fv3wam_v1
 [submodule "ccpp/framework"]
   path = ccpp/framework
   url = https://github.com/NCAR/ccpp-framework
@@ -9,7 +9,7 @@
 [submodule "ccpp/physics"]
   path = ccpp/physics
   url = https://github.com/SvetlanaKarol-NOAA/ccpp-physics
-  branch = fv3_wamphys
+  branch = fv3wam_v1
 [submodule "upp"]
   path = upp
   url = https://github.com/NOAA-EMC/UPP
