--- a/.gitmodules
+++ b/.gitmodules
@@ -1,19 +1,19 @@
 [submodule "atmos_cubed_sphere"]
   path = atmos_cubed_sphere
-#  url = https://github.com/WChen-NOAA/GFDL_atmos_cubed_sphere
-#  branch = fv3wam2
-  url = https://github.com/NOAA-GFDL/GFDL_atmos_cubed_sphere
-  branch = dev/emc
+  url = https://github.com/WChen-NOAA/GFDL_atmos_cubed_sphere
+  branch = fv3wam2
+#  url = https://github.com/NOAA-GFDL/GFDL_atmos_cubed_sphere
+#  branch = dev/emc
 [submodule "ccpp/framework"]
   path = ccpp/framework
   url = https://github.com/NCAR/ccpp-framework
   branch = main
 [submodule "ccpp/physics"]
   path = ccpp/physics
-#  url = https://github.com/WChen-NOAA/ccpp-physics
-#  branch = fv3wam2
-  url = https://github.com/ufs-community/ccpp-physics
-  branch = ufs/dev
+  url = https://github.com/WChen-NOAA/ccpp-physics
+  branch = fv3wam2
+#  url = https://github.com/ufs-community/ccpp-physics
+#  branch = ufs/dev
 [submodule "upp"]
   path = upp
   url = https://github.com/NOAA-EMC/UPP
