--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,9 @@
 [submodule "atmos_cubed_sphere"]
   path = atmos_cubed_sphere
-  url = https://github.com/KevinViner-NOAA/GFDL_atmos_cubed_sphere
-  branch = wam2_dev
+  url = https://github.com/WChen-NOAA/GFDL_atmos_cubed_sphere
+  branch = wamlocaldev
+#  url = https://github.com/KevinViner-NOAA/GFDL_atmos_cubed_sphere
+#  branch = wam2_dev
 #  url = https://github.com/NOAA-GFDL/GFDL_atmos_cubed_sphere
 #  branch = dev/emc
 [submodule "ccpp/framework"]
@@ -11,7 +13,8 @@
 [submodule "ccpp/physics"]
   path = ccpp/physics
   url = https://github.com/WChen-NOAA/ccpp-physics
-  branch = wam2c
+  branch = wamlocaldev
+#  branch = wam2c
 #  url = https://github.com/ufs-community/ccpp-physics
 #  branch = ufs/dev
 [submodule "upp"]
