--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,9 @@
 [submodule "atmos_cubed_sphere"]
-  path = atmos_cubed_sphere
-  url = https://github.com/KevinViner-NOAA/GFDL_atmos_cubed_sphere
-  branch = wam2c
+   path = atmos_cubed_sphere
+   url = https://github.com/WChen-NOAA/GFDL_atmos_cubed_sphere
+   branch = wam2ck
+#  url = https://github.com/KevinViner-NOAA/GFDL_atmos_cubed_sphere
+#  branch = wam2c
 #  url = https://github.com/NOAA-GFDL/GFDL_atmos_cubed_sphere
 #  branch = dev/emc
 [submodule "ccpp/framework"]
