--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,19 @@
 [submodule "atmos_cubed_sphere"]
   path = atmos_cubed_sphere
-  url = https://github.com/SvetlanaKarol-NOAA/GFDL_atmos_cubed_sphere
-  branch = fv3wam_v1
+  url = https://github.com/WChen-NOAA/GFDL_atmos_cubed_sphere
+  branch = wam_b4	
+#  url = https://github.com/SvetlanaKarol-NOAA/GFDL_atmos_cubed_sphere
+#  branch = fv3wam_v1
 [submodule "ccpp/framework"]
   path = ccpp/framework
   url = https://github.com/NCAR/ccpp-framework
   branch = main
 [submodule "ccpp/physics"]
   path = ccpp/physics
-  url = https://github.com/SvetlanaKarol-NOAA/ccpp-physics
-  branch = fv3wam_v1
+  url = https://github.com/WChen-NOAA/ccpp-physics
+  branch = wam_b4
+ # url = https://github.com/SvetlanaKarol-NOAA/ccpp-physics
+ # branch = fv3wam_v1
 [submodule "upp"]
   path = upp
   url = https://github.com/NOAA-EMC/UPP
